Cambios en el index

--- a/index.html
+++ b/index.html
@@ -4,10 +4,66 @@
 	<title>Marisabel Hernandez</title>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="stylesheets/normalize.css">
-  	<link rel="stylesheet" href="stylesheets/styles.css">
+  	<link rel="stylesheet" href="stylesheets/estilos.css">
 
 </head>
 <body>
+	<div class="barraNav">
+		<div class="contenedor">
+			<nav id="menu" class="navbar">
+				<ul class="opciones">
+					<li>
+						<a href="#">Inicio</a>
+					</li>
+					<li>
+						<a href="#">Sobre mi</a>
+					</li>
+					<li>
+						<a href="#">Servicios</a>
+					</li>
+					<li>
+						<a href="#">Contacto</a>
+					</li>
+				</ul>
+			</nav>
+		</div>
+	</div>
+
+	 <section class="informacion">
+      <div class="datos">
+        <img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/10898139_10204507560785848_4347205155933356621_n.jpg?oh=072a6f01ca96669b70c2c9bb47ffaa6c&oe=55501405&__gda__=1428393235_7e449fe5a1d232e96358ae4f2f7bb7d2">
+
+        <h1 class="nombre">
+          Mi nombre
+        </h1>
+        <p>Ingeniero en Informática</p>
+      </div>
+     
+    </section>
+    <div class="redes">
+    <ul class="linksoptions">
+      <li>
+        <a href="http://facebook.com/marihlopez2" target="_blank">
+          <p>Facebook</p>
+        </a>
+      </li>
+      <li>
+        <a href="https://twitter.com/marihlopez" target="_blank">
+          <p>Twitter</p>
+        </a>
+      </li>
+      <li>
+        <a href="#" target="_blank">
+          <p>Instagram</p>
+        </a>
+      </li>
+      <li>
+        <a href="https://twitter.com/marihlopez" target="_blank">
+          <p>GitHub</p>
+        </a>
+      </li>
+    </ul>
+    </div>
 
 </body>
 </html>
